...
  static const String _themeKey = 'is_dark_mode';
  static const String _colorKey = 'seed_color_index';
  static const String _fontKey = 'font_index';

  static const List<AppColor> availableColors = [
    AppColor('Ungu', Color(0xFF6750A4)),
    AppColor('Biru', Color(0xFF1565C0)),
    AppColor('Hijau', Color(0xFF2E7D32)),
    AppColor('Merah', Color(0xFFC62828)),
    AppColor('Oranye', Color(0xFFE65100)),
    AppColor('Pink', Color(0xFFAD1457)),
    AppColor('Teal', Color(0xFF00695C)),
    AppColor('Indigo', Color(0xFF283593)),
...

  static final List<AppFont> availableFonts = [
    AppFont('Poppins', GoogleFonts.poppinsTextTheme),
    AppFont('Roboto', GoogleFonts.robotoTextTheme),
    AppFont('Lato', GoogleFonts.latoTextTheme),
    AppFont('Nunito', GoogleFonts.nunitoTextTheme),
    AppFont('Inter', GoogleFonts.interTextTheme),
    AppFont('Montserrat', GoogleFonts.montserratTextTheme),
    AppFont('Raleway', GoogleFonts.ralewayTextTheme),
    AppFont('Josefin Sans', GoogleFonts.josefinSansTextTheme),
  ];

  late ThemeMode _themeMode;
...
